# fdupes

./: .gitignore  CMakeLists.txt
src/: config.h
src/fdupes/: CMakeLists.txt  confirmmatch.c  confirmmatch.h  errormsg.c  fdupes.c  fdupes.h  mbstowcs_escape_invalid.c  mbstowcs_escape_invalid.h  removeifnotchanged.c
src/fdupes/md5/: CMakeLists.txt  md5.c  md5.h
src/ncurses/: CMakeLists.txt  commandidentifier.c  fileaction.c  fileaction.h  filegroup.h  ncurses-commands.c  ncurses-commands.h  ncurses-getcommand.c  ncurses-interface.c  ncurses-interface.h  ncurses-print.c  ncurses-prompt.c  ncurses-status.c  positive_wcwidth.c  positive_wcwidth.h  wcs.c
src/sqlite/: CMakeLists.txt  getrealpath.c  getrealpath.h  hashdb.c  hashdb.h  sbasename.c  sbasename.h  sdirname.c  sdirname.h  xdgbase.c  xdgbase.h
